--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,9 @@
-
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.counter div{
+    font-size: 100px;
+    line-height: 100px;
+    display: inline-block;
+    background: rgb(0, 0, 0);
+    margin: 30px;
+    padding: 30px;
+    border-radius: 10px;
+}
